持续修复各种问题